--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,8 +8,11 @@
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
+
+@import url('https://fonts.googleapis.com/css?family=Exo:400,700');
 body {
   font-family: "Open Sans", sans-serif;
+  font-family: 'Exo', sans-serif;
   background-color: #040404;
   color: #fff;
   position: relative;
@@ -19,7 +22,7 @@ body {
 body::before {
   content: "";
   position: fixed;
-  background: #040404 url("../img/bg.jpg") top right no-repeat;
+  background: #212121 ;
   background-size: cover;
   left: 0;
   right: 0;
@@ -27,6 +30,154 @@ body::before {
   height: 100vh;
   z-index: -1;
 }
+
+
+
+
+.context {
+  width: 100%;
+  position: absolute;
+  top:50vh;
+  
+}
+
+.context h1{
+  text-align: center;
+  color: rgb(255, 255, 255);
+  font-size: 50px;
+}
+
+
+.area{
+  background: #191919 ;  
+  background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);  
+  width: 100%;
+  height:100vh;
+  
+ 
+}
+
+.circles{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.circles li{
+  position: absolute;
+  display: block;
+  list-style: none;
+  width: 20px;
+  height: 20px;
+  background: rgba(255, 255, 255, 0.2);
+  animation: animate 30s linear infinite;
+  bottom: -150px;
+  
+}
+
+.circles li:nth-child(1){
+  left: 25%;
+  width: 80px;
+  height: 80px;
+  animation-delay: 0s;
+}
+
+
+.circles li:nth-child(2){
+  left: 10%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 2s;
+  animation-duration: 12s;
+}
+
+.circles li:nth-child(3){
+  left: 70%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 4s;
+}
+
+.circles li:nth-child(4){
+  left: 40%;
+  width: 60px;
+  height: 60px;
+  animation-delay: 0s;
+  animation-duration: 18s;
+}
+
+.circles li:nth-child(5){
+  left: 65%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 0s;
+}
+
+.circles li:nth-child(6){
+  left: 75%;
+  width: 110px;
+  height: 110px;
+  animation-delay: 3s;
+}
+
+.circles li:nth-child(7){
+  left: 35%;
+  width: 150px;
+  height: 150px;
+  animation-delay: 7s;
+}
+
+.circles li:nth-child(8){
+  left: 50%;
+  width: 25px;
+  height: 25px;
+  animation-delay: 15s;
+  animation-duration: 45s;
+}
+
+.circles li:nth-child(9){
+  left: 20%;
+  width: 15px;
+  height: 15px;
+  animation-delay: 2s;
+  animation-duration: 35s;
+}
+
+.circles li:nth-child(10){
+  left: 85%;
+  width: 150px;
+  height: 150px;
+  animation-delay: 0s;
+  animation-duration: 11s;
+}
+
+
+
+@keyframes animate {
+
+  0%{
+      transform: translateY(0) rotate(0deg);
+      opacity: 1;
+      border-radius: 0;
+  }
+
+  100%{
+      transform: translateY(-1000px) rotate(720deg);
+      opacity: 0;
+      border-radius: 50%;
+  }
+
+}
+
+
+
+
+
+
+
 
 @media (min-width: 1024px) {
   body::before {
@@ -57,6 +208,20 @@ h6 {
 # Header
 --------------------------------------------------------------*/
 #header {
+
+  background: url("../img/bg.png") ;
+  
+  
+  background-repeat: no-repeat;
+  background-position-x: right;
+  background-position-y: bottom;
+  /* background-attachment: fixed; */
+  background-size: contain;
+  
+
+  
+
+
   transition: ease-in-out 0.3s;
   position: relative;
   height: 100vh;
@@ -65,6 +230,8 @@ h6 {
   z-index: 997;
   overflow-y: auto;
 }
+
+
 
 #header * {
   transition: ease-in-out 0.3s;
@@ -94,7 +261,7 @@ h6 {
 
 #header h2 span {
   color: #fff;
-  border-bottom: 2px solid #18d26e;
+  border-bottom: 2px solid #ff0000;
   padding-bottom: 6px;
 }
 
@@ -122,6 +289,76 @@ h6 {
   height: 40px;
 }
 
+
+/* ABOUT PAGE SOCIAL LINKS */
+
+#links .social-links {
+  margin-top: 40px;
+  display: flex;
+}
+
+#links .social-links a {
+  font-size: 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(255, 255, 255, 0.1);
+  color: #fff;
+  line-height: 1;
+  margin-right: 8px;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+}
+
+#links .social-links a:hover {
+  background: #18d26e;
+}
+
+@media (max-width: 992px) {
+  #links h1 {
+    font-size: 36px;
+  }
+
+  #links h2 {
+    font-size: 20px;
+    line-height: 30px;
+  }
+
+  #links .social-links {
+    margin-top: 15px;
+  }
+
+  #links .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+#links.header-top .social-links,
+#links.header-top h2 {
+  display: none;
+}
+
+.contact .info-box .social-links a {
+  font-size: 18px;
+  display: inline-block;
+  color: #fff;
+  line-height: 1;
+  margin-right: 12px;
+  transition: 0.3s;
+}
+
+.contact .info-box .social-links a:hover {
+  color: #18d26e;
+}
+
+
+
+/* HOME PAGE SOCIAL LINKS */
+
+
 #header .social-links a:hover {
   background: #18d26e;
 }
@@ -145,6 +382,15 @@ h6 {
     flex-direction: column;
     align-items: center;
   }
+}
+
+.name {
+  font-size: 48px !important;
+  /* margin: 0; */
+  padding: 0;
+  line-height: 1;
+  font-weight: 700;
+  font-family: "Poppins", sans-serif;
 }
 
 /* Header Top */
@@ -241,7 +487,7 @@ h6 {
   height: 2px;
   bottom: -4px;
   left: 0;
-  background-color: #18d26e;
+  background-color: #0800ff;
   visibility: hidden;
   width: 0px;
   transition: all 0.3s ease-in-out 0s;
